<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MySimpleTweets</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Home Timeline</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="mentions">Mentions</string>
    <string name="top_tweets">Top Tweets</string>
    <string name="all_tweets">All Tweets</string>
    <string name="profile">Profile</string>
    <string name="following">FOLLOWING</string>
    <string name="followers">FOLLOWERS</string>
    <string name="tweet">Tweet</string>
    <string name="tweet_hint">What\'s happening?</string>
    <string name="default_tweet_length">0</string>
    <string name="search">Search</string>
    <string name="search_twitter">Search Twitter</string>
    <string name="internet_connection_error">Internet Connection Error</string>
    <string name="retry">Retry</string>
    <string name="twitter_api_error">Twitter API Error</string>
    <string name="internal_error">Internal Error</string>
    <string name="reply_to">Reply to</string>
    <string name="done">Done</string>
    <string name="send">Send</string>
    <string name="start_a_new_message">Start a new message</string>
    <string name="messages">Messages</string>

</resources>