<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
        android:title="@string/search"
        android:icon="@drawable/magnify"
        app:showAsAction="always"
        app:actionLayout="@layout/searchview_layout" />

    <item
        android:id="@+id/miCompose"
        app:showAsAction="always"
        android:icon="@drawable/pen"
        android:title="@string/tweet"
        android:onClick="onComposeView"
        />

    <item
        android:id="@+id/miMessage"
        app:showAsAction="always"
        android:icon="@drawable/message"
        android:title="@string/messages"
        android:onClick="onMessageView"
        />

    <item
        android:id="@+id/miProfile"
        app:showAsAction="always"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        android:onClick="onProfileView"
        />

</menu>